eventemitter2, reorganize events

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "camo-purge ; xo"
   },
   "dependencies": {
+    "eventemitter2": "^5.0.1",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "ws": "^4.0.0"
