--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@oznu/ws-connect": "^0.0.4",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1",
-    "ws": "^2.3.1"
+    "request-promise": "^4.2.1"
   },
   "repository": {
     "type": "git",
