--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "eventemitter2": "^5.0.1",
+    "request": "^2.83.0",
     "request-promise": "^4.2.2",
     "ws": "^4.0.0"
   },
